# cosmo-hw

./: .gitignore  README.md  pyproject.toml
hw2/: homework2.ipynb
hw4/: homework4.ipynb  homework4corrected.ipynb
hw5/: homework5-corrected.ipynb  homework5.ipynb  hw5p4.nb
hw6/: homework6.ipynb
hw7/: homework7.ipynb
hw8/: homework8.ipynb
